kubernetes/infrastructure/monitoring/httproute-grafana.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  parentRefs:
    - name: homelab-gateway
      namespace: kube-system
      sectionName: https
  hostnames:
    - grafana.alialjaffer.com
  rules:
    - backendRefs:
        - name: kube-prometheus-grafana
          namespace: monitoring
          port: 80
